frontend/main.css
.swiper {
  @apply overflow-hidden rounded-lg w-min max-w-3xl mr-auto !ml-0;
}

.swiper-slide {
  @apply flex justify-start w-full flex-col;
}

.swiper-slide img {
  @apply block w-full h-full object-cover;
}

.swiper-pagination {
  @apply !relative pb-[9px] mr-4 ml-2 sm:mx-8;
}

.swiper-title {
  @apply sm:text-title text-titleMobile font-bold mb-5;
}

.swiper-pagination-bullet.swiper-pagination-bullet-active {
  @apply !rounded-full !w-[36px] !bg-black-base;
}

.swiper-pagination-bullet {
  @apply !rounded-full !w-[16px] !bg-[#0B0E13] !h-[3px] !mx-2 transition-all duration-200 ease-in-out;
}

.swiper-pagination-horizontal {
  @apply !w-auto !bottom-0 !left-0;
}

.swiper-controls {
  @apply flex items-center md:mt-[50px];
}

.offset-header {
  @apply lg:mt-[56px];
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input[type="number"] {
  appearance: textfield;
}

.clip-text {
  -webkit-background-clip: text !important;
  -moz-background-clip: text !important;
  -webkit-text-fill-color: transparent !important;
  -moz-text-fill-color: transparent !important;
}

